--- a/DoAn/ComputerStore/Areas/User/Views/Shared/_LayoutUser.cshtml
+++ b/DoAn/ComputerStore/Areas/User/Views/Shared/_LayoutUser.cshtml
@@ -25,7 +25,7 @@
             <div class="header-fixed">
                 <div class="header grid">
                     <div class="logo">
-                        <a href="/" class="logo-link">
+                        <a href="/User/Home/Index" class="logo-link">
                             <img class="logo-img my-logo-img" src="~/assets_user/image/logo/logo_header.svg" alt="Ảnh Logo">
                         </a>
                     </div>
@@ -65,7 +65,7 @@
                                     <i class="fas fa-piggy-bank"></i>
                                     <div class="header-right-text">Khuyến mãi</div>
                                 </a>
-                                <a class="header-top-right" href="#">
+                                <a class="header-top-right" href="~/User/CartItems/Index">
                                     <div class="icon-has-notice">
                                         <i class="fas fa-shopping-cart"></i>
                                         <span class="cart-notice">0</span>
